--- a/config.json
+++ b/config.json
@@ -1,4 +1,5 @@
 {
     "prefix": ">",
-    "token": "NzI3NTI3NzI4NDk1OTg0Njkw.Xvt4lQ.QUIwQRhZYuXTrgqYgkZ1JrF8BLY"
+    "token": "NzI3NTI3NzI4NDk1OTg0Njkw.Xvt4lQ.QUIwQRhZYuXTrgqYgkZ1JrF8BLY",
+    "bungiekey": "d5140500c46041c187011a021cc363dc"
 }
